Fixed formatting and done animation for random generation

--- a/index6x6.html
+++ b/index6x6.html
@@ -21,14 +21,14 @@
     <link href="css/custom6x6.css" rel="stylesheet">
 
   </head>
-    <body>
-    <div class="container col-xs-offset-4 col-xs-4">
+  <body>
+    <div class="container header">
       <div class="heading">
-        <div class="col-xs-6">
+        <div class="mainTitle col-xs-6">
           <h1 class="title">2048</h1>
           <p class="game-intro">Join the numbers and get as high a score as possible!</strong></p>
         </div>
-        <div class="score_newgame col-xs-offset-2 col-xs-4">
+        <div class="score_newgame col-xs-6">
           <div class="score-container">
             <div class="score-title">SCORE</div>
             <div id="totalscore"></div>
@@ -38,7 +38,7 @@
       </div>
     </div>
 
-    <section class ="container-fluid col-xs-offset-2 col-xs-8 grid">
+    <section class ="container-fluid grid">
       <div class = "row" id="grid_1">
         <div id="column1" class="grid-box col-xs-2" myAttr='canMove' combine='canCombine'>0</div>
         <div id="column2" class="grid-box col-xs-2" myAttr='canMove' combine='canCombine'>0</div>
