Moved all boards into one index.html file

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
     </div>
 
     <section class ="container-fluid">
-      <div class="grid">
+      <div class="grid" id="fourgrid">
         <div class = "row" id="grid_1">
           <div id="column1" class="grid-box col-xs-3" myAttr='canMove' combine='canCombine'>0</div>
           <div id="column2" class="grid-box col-xs-3" myAttr='canMove' combine='canCombine'>0</div>
@@ -66,10 +66,13 @@
       </div>      
     </section>
 
-    <section class="container col-xs-offset-4 col-xs-4">
-      <a href="index5x5.html" class="col-xs-4">5x5 Grid</a>
-      <a href="index6x6.html" class="col-xs-4">6x6 Grid</a>
-      <a href="index8x8.html" class="col-xs-4">8x8 Grid</a>
+    <div class="message container col-xs-offset-5 col-xs-2"></div>
+
+    <section class="footer container col-xs-offset-4 col-xs-4">
+      <button type="button" id="grid4" class="class-xs-3 btn btn-danger">4x4 Grid</button>
+      <button type="button" id="grid5" class="class-xs-3 btn btn-danger">5x5 Grid</button>
+      <button type="button" id="grid6" class="class-xs-3 btn btn-danger">6x6 Grid</button>
+      <button type="button" id="grid8" class="class-xs-3 btn btn-danger">8x8 Grid</button>
     </section>
 
   </body>
