--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <div class="heading">
         <div class="mainTitle col-xs-6">
           <h1 class="title">2048</h1>
-          <p class="game-intro">Join the numbers and get to the <strong>2048 tile!</strong></p>
+          <p class="game-intro">Join the numbers and get to the 2048 tile!</p>
         </div>
         <div class="score_newgame col-xs-6">
           <div class="score-container">
@@ -38,7 +38,7 @@
     </div>
 
     <section class ="container-fluid">
-      <div class="grid" id="fourgrid">
+      <div class="grid" id="grid4">
         <div class = "row" id="grid_1">
           <div id="column1" class="grid-box col-xs-3" myAttr='canMove' combine='canCombine'>0</div>
           <div id="column2" class="grid-box col-xs-3" myAttr='canMove' combine='canCombine'>0</div>
@@ -66,14 +66,14 @@
       </div>      
     </section>
 
-    <div class="message container col-xs-offset-5 col-xs-2"></div>
-
-    <section class="footer container col-xs-offset-4 col-xs-4">
-      <button type="button" id="grid4" class="class-xs-3 btn btn-danger">4x4 Grid</button>
-      <button type="button" id="grid5" class="class-xs-3 btn btn-danger">5x5 Grid</button>
-      <button type="button" id="grid6" class="class-xs-3 btn btn-danger">6x6 Grid</button>
-      <button type="button" id="grid8" class="class-xs-3 btn btn-danger">8x8 Grid</button>
+    <section class="footer container">
+      <button type="button" id="fourgrid" class="class-xs-3 btn btn-danger">4x4 Grid</button>
+      <button type="button" id="fivegrid" class="class-xs-3 btn btn-danger">5x5 Grid</button>
+      <button type="button" id="sixgrid" class="class-xs-3 btn btn-danger">6x6 Grid</button>
+      <button type="button" id="eightgrid" class="class-xs-3 btn btn-danger">8x8 Grid</button>
     </section>
+
+    <div class="message container col-xs-offset-5 col-xs-2"></div>
 
   </body>
 </html>
